# hn-data-fetcher

./: .gitignore  hn_asnyc2.py  pyproject.toml  readme.md  requirements-dev.txt  setup.py
.github/workflows/: test.yml  workflow.yml
src/: hn_async2.py
src/hn_data_fetcher/: __init__.py  hn_data_fetcher.py  hn_to_hive.py  to_hive.py  upload_to_tigris.py
tests/: test_hn_async.py
