[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hn-data-fetcher"
version = "0.1.0"
authors = [
  { name="Adhika Setya Pramudita", email="adhika.setya.p@gmail.com" },
]
description = "A short description of your package"
readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/adhikasp/hn-data-fetcher"
"Bug Tracker" = "https://github.com/adhikasp/hn-data-fetcher/issues"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 88
target-version = "py38" 